--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,12 @@ wasm-opt = false
 crate-type = ["cdylib"]
 
 [dependencies]
-worker = { version="0.5.0" }
+worker = { version="0.5.0", features = ["d1"]}
 worker-macros = { version="0.5.0" }
 console_error_panic_hook = { version = "0.1.1" }
 futures-util = "0.3.31"
 futures = "0.3.31"
 serde = { version = "1.0.216", features = ["derive"] }
-ic-agent = { version = "0.39.1", features = ["wasm-bindgen"] }
 serde_json = "1.0.133"
-candid = "0.10.11"
+getrandom = {version = "0.2.11", features = ["js"]}
 rand = "0.8.5"
