--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,5 @@ serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
 getrandom = {version = "0.2.11", features = ["js"]}
 rand = "0.8.5"
+chrono = { version = "0.4", features = ["clock"] }
+uuid = { version = "1.8", features = ["v4"] }
