--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,4 +25,4 @@ serde_json = "1.0.133"
 getrandom = {version = "0.2.11", features = ["js"]}
 rand = "0.8.5"
 chrono = { version = "0.4", features = ["clock"] }
-uuid = { version = "1.8", features = ["v4"] }
+uuid = { version = "1.8", features = ["v4", "js"] }
