--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,5 @@ rand = "0.8.5"
 chrono = { version = "0.4", features = ["clock"] }
 uuid = { version = "1.8", features = ["v4", "js"] }
 once_cell = "1.18"
+sha2 = "0.10.9"
+hex = "0.4.3"
