--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,4 +29,4 @@ uuid = { version = "1.8", features = ["v4", "js"] }
 once_cell = "1.18"
 sha2 = "0.10.9"
 hex = "0.4.3"
-reqwest = "0.12.16"
+reqwest = { version = "0.12.16", features = ["multipart", "json"] }
