--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,5 @@ once_cell = "1.18"
 sha2 = "0.10.9"
 hex = "0.4.3"
 reqwest = { version = "0.12.16", features = ["multipart", "json"] }
+js-sys = "0.3.69"
+web-sys = { version = "0.3.69", features = ["Blob", "BlobPropertyBag", "File", "FormData"] }
