--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,14 @@ futures-util = "0.3.31"
 futures = "0.3.31"
 serde = { version = "1.0.216", features = ["derive"] }
 serde_json = "1.0.133"
-getrandom = {version = "0.2.11", features = ["js"]}
 rand = "0.8.5"
 chrono = { version = "0.4", features = ["clock"] }
 uuid = { version = "1.8", features = ["v4", "js"] }
 once_cell = "1.18"
 sha2 = "0.10.9"
 hex = "0.4.3"
-reqwest = { version = "0.12.16", features = ["multipart", "json"] }
+reqwest = { version = "0.12.16", features = ["multipart", "json"], default-features = false }
 js-sys = "0.3.69"
 web-sys = { version = "0.3.69", features = ["Blob", "BlobPropertyBag", "File", "FormData"] }
+alloy = {version="1.0.12" ,default-features=false}
+getrandom = { version = "0.3.2", features = ["wasm_js"] }
